--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>DoPT Email Sender - SSC CGL</title>
+  <title>SSC CGL Email Sender</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,19 +11,27 @@
 
     h1 {
       font-size: 24px;
+      margin-bottom: 20px;
     }
 
-    button {
-      display: block;
-      width: 100%;
-      padding: 10px;
-      margin: 8px 0;
+    .email-button {
+      margin: 8px;
+      padding: 10px 16px;
       font-size: 16px;
       cursor: pointer;
+      border: none;
+      background-color: #007bff;
+      color: white;
+      border-radius: 6px;
+      transition: background-color 0.3s ease;
     }
 
-    .sent {
-      background-color: #d3ffd3 !important;
+    .email-button:hover:not(.sent) {
+      background-color: #0056b3;
+    }
+
+    .email-button.sent {
+      background-color: #28a745 !important;
       pointer-events: none;
     }
 
@@ -32,141 +40,68 @@
       font-weight: bold;
       font-size: 18px;
       color: green;
-      margin-top: 20px;
+      margin-top: 30px;
     }
   </style>
 </head>
 <body>
-  <h1>Send 20 Emails to SSC Chairman</h1>
 
-  <!-- Buttons for sending emails -->
-  <button onclick="handleClick(this, 0)">Send Email 1</button>
-  <button onclick="handleClick(this, 1)">Send Email 2</button>
-  <button onclick="handleClick(this, 2)">Send Email 3</button>
-  <button onclick="handleClick(this, 3)">Send Email 4</button>
-  <button onclick="handleClick(this, 4)">Send Email 5</button>
-  <button onclick="handleClick(this, 5)">Send Email 6</button>
-  <button onclick="handleClick(this, 6)">Send Email 7</button>
-  <button onclick="handleClick(this, 7)">Send Email 8</button>
-  <button onclick="handleClick(this, 8)">Send Email 9</button>
-  <button onclick="handleClick(this, 9)">Send Email 10</button>
-  <button onclick="handleClick(this, 10)">Send Email 11</button>
-  <button onclick="handleClick(this, 11)">Send Email 12</button>
-  <button onclick="handleClick(this, 12)">Send Email 13</button>
-  <button onclick="handleClick(this, 13)">Send Email 14</button>
-  <button onclick="handleClick(this, 14)">Send Email 15</button>
-  <button onclick="handleClick(this, 15)">Send Email 16</button>
-  <button onclick="handleClick(this, 16)">Send Email 17</button>
-  <button onclick="handleClick(this, 17)">Send Email 18</button>
-  <button onclick="handleClick(this, 18)">Send Email 19</button>
-  <button onclick="handleClick(this, 19)">Send Email 20</button>
+<h1>Send 20 Emails to SSC Chairman</h1>
 
-  <!-- Success message -->
-  <div id="successMessage">
-    ✅ Well done! You've successfully sent all 20 emails!
-  </div>
+<div id="buttonContainer">
+  <!-- 20 Buttons with real mailto: links -->
+  <button class="email-button" onclick="sendEmail(this, 1)">Send Email 1</button>
+  <button class="email-button" onclick="sendEmail(this, 2)">Send Email 2</button>
+  <button class="email-button" onclick="sendEmail(this, 3)">Send Email 3</button>
+  <button class="email-button" onclick="sendEmail(this, 4)">Send Email 4</button>
+  <button class="email-button" onclick="sendEmail(this, 5)">Send Email 5</button>
+  <button class="email-button" onclick="sendEmail(this, 6)">Send Email 6</button>
+  <button class="email-button" onclick="sendEmail(this, 7)">Send Email 7</button>
+  <button class="email-button" onclick="sendEmail(this, 8)">Send Email 8</button>
+  <button class="email-button" onclick="sendEmail(this, 9)">Send Email 9</button>
+  <button class="email-button" onclick="sendEmail(this, 10)">Send Email 10</button>
+  <button class="email-button" onclick="sendEmail(this, 11)">Send Email 11</button>
+  <button class="email-button" onclick="sendEmail(this, 12)">Send Email 12</button>
+  <button class="email-button" onclick="sendEmail(this, 13)">Send Email 13</button>
+  <button class="email-button" onclick="sendEmail(this, 14)">Send Email 14</button>
+  <button class="email-button" onclick="sendEmail(this, 15)">Send Email 15</button>
+  <button class="email-button" onclick="sendEmail(this, 16)">Send Email 16</button>
+  <button class="email-button" onclick="sendEmail(this, 17)">Send Email 17</button>
+  <button class="email-button" onclick="sendEmail(this, 18)">Send Email 18</button>
+  <button class="email-button" onclick="sendEmail(this, 19)">Send Email 19</button>
+  <button class="email-button" onclick="sendEmail(this, 20)">Send Email 20</button>
+</div>
 
-  <script>
-    const emails = [
-      {
-        subject: "Request for Urgent Meeting with SSC Chairman",
-        body: "Respected Sir,%0D%0A%0D%0AWe aspirants have come from various states and are currently waiting outside your office, seeking an opportunity to meet you regarding our concerns about SSC CGL 2025. Kindly consider our humble request for a short meeting today.%0D%0A%0D%0ARegards,%0D%0ACGL Aspirants"
-      },
-      {
-        subject: "SSC CGL 2025 - Request for Meeting Regarding Age Cutoff",
-        body: "Dear Sir,%0D%0A%0D%0AWe are a group of aspirants waiting outside your office today. We've traveled from multiple states seeking a meeting to discuss the age reckoning issue for CGL 2025. Kindly grant us a few minutes of your time.%0D%0A%0D%0AThank you.%0D%0ASincerely,%0D%0ACandidates Present"
-      },
-      {
-        subject: "Aspirants Waiting Outside for SSC CGL 2025 Discussion",
-        body: "Respected Chairman Sir,%0D%0A%0D%0AWe, a group of CGL aspirants from across India, are present outside your office today. We humbly request a few minutes to discuss urgent concerns related to CGL 2025.%0D%0A%0D%0AThanking you in anticipation.%0D%0ACGL Candidates"
-      },
-      {
-        subject: "Kind Request for Meeting - SSC CGL Aspirants Present",
-        body: "Sir,%0D%0A%0D%0AA group of aspirants have gathered outside your office today. We request your kind permission for a brief meeting to explain our difficulties with the SSC CGL 2025 notification.%0D%0A%0D%0ARegards,%0D%0AAffected Aspirants"
-      },
-      {
-        subject: "Today’s Request for Meeting Regarding CGL Age Criteria",
-        body: "Sir,%0D%0A%0D%0AThis is to inform you that aspirants from different regions are present outside your office. We request a brief meeting to discuss age eligibility issues and other irregularities in SSC CGL 2025.%0D%0A%0D%0AThank you.%0D%0ASincerely,%0D%0ACandidates Awaiting"
-      },
-      {
-        subject: "CGL 2025 Final Attempt Aspirants – Urgent Meeting Request",
-        body: "Respected Sir,%0D%0A%0D%0AWe are outside your office today seeking an urgent meeting to raise our concerns regarding the final attempt eligibility and notification irregularities in SSC CGL 2025.%0D%0A%0D%0AWe humbly await your kind response.%0D%0AThanks and Regards."
-      },
-      {
-        subject: "Candidates Waiting Outside SSC Office – Meeting Request",
-        body: "Dear Sir,%0D%0A%0D%0AA group of genuine aspirants are outside your office. Kindly grant us 5 minutes to present our case regarding SSC CGL 2025. Your time means everything to us.%0D%0A%0D%0ARegards,%0D%0ACandidates"
-      },
-      {
-        subject: "Humble Request for Immediate Meeting – SSC CGL Candidates",
-        body: "Respected Chairman,%0D%0A%0D%0AWe, the affected candidates, are presently at the SSC headquarters. Please grant us a few minutes to discuss crucial issues in the CGL 2025 recruitment.%0D%0A%0D%0AThank you.%0D%0AYours faithfully"
-      },
-      {
-        subject: "Today’s Visit to SSC HQ – Request for Chairman Interaction",
-        body: "Sir,%0D%0A%0D%0AWe came from different parts of India and are gathered outside SSC HQ today. Kindly consider granting a short interaction with you regarding our urgent appeal on CGL 2025.%0D%0A%0D%0ARegards"
-      },
-      {
-        subject: "SSC CGL 2025 – Final Attempt Candidates Seek Hearing",
-        body: "Sir,%0D%0A%0D%0AWe are final attempt aspirants for CGL 2025. Presently outside SSC office, we humbly request an opportunity to meet you briefly.%0D%0A%0D%0AWith due respect,%0D%0AWaiting Candidates"
-      },
-      // Emails 11–20 (repeat or customize as needed)
-      {
-        subject: "Urgent Representation by Aspirants – CGL 2025",
-        body: "Sir,%0D%0A%0D%0AWe are sincerely waiting outside your office to request a short meeting regarding age eligibility and exam fairness in SSC CGL 2025.%0D%0A%0D%0AWe seek your guidance and support.%0D%0ARegards"
-      },
-      {
-        subject: "CGL 2025 – Kindly Grant Us a Hearing",
-        body: "Dear Sir,%0D%0A%0D%0AWe have arrived today to meet you for clarifying important matters concerning aspirants. Please allow us to express our concerns directly.%0D%0A%0D%0AThank you."
-      },
-      {
-        subject: "Today’s Aspirant Gathering at SSC – Request for Attention",
-        body: "Sir,%0D%0A%0D%0AWe are outside your office today. Kindly spare a few minutes for us so we may respectfully present our case on CGL 2025.%0D%0A%0D%0AThanking you."
-      },
-      {
-        subject: "Immediate Audience Requested by CGL Aspirants",
-        body: "Respected Chairman,%0D%0A%0D%0AWe are present outside SSC and seek your kind permission to meet you today regarding our genuine concerns in SSC CGL.%0D%0A%0D%0ARegards"
-      },
-      {
-        subject: "From Final Chance Aspirants – SSC CGL 2025",
-        body: "Sir,%0D%0A%0D%0APlease give us a chance to meet you. We are present at your office premises today with hope and faith.%0D%0A%0D%0AThanks."
-      },
-      {
-        subject: "SSC HQ Visit – CGL 2025 Issue",
-        body: "Sir,%0D%0A%0D%0AToday we are here seeking your time to discuss challenges in CGL 2025. Kindly consider our plea.%0D%0A%0D%0ASincerely."
-      },
-      {
-        subject: "Aspirants Request Meeting at SSC Today",
-        body: "Dear Sir,%0D%0A%0D%0AA group of us is outside SSC today. Please allow us to speak to you regarding important issues in this year's notification.%0D%0A%0D%0ARegards"
-      },
-      {
-        subject: "Kind Appeal from Aspirants Present Today",
-        body: "Sir,%0D%0A%0D%0AWe are waiting today outside your office to humbly request your time and attention on age cut-off related grievances.%0D%0A%0D%0AThank you."
-      },
-      {
-        subject: "Today’s CGL Aspirants at SSC – Request for Meeting",
-        body: "Sir,%0D%0A%0D%0AWe are present outside your office, united by the concern over final attempt eligibility. Kindly allow us to meet you.%0D%0A%0D%0ARegards."
-      },
-      {
-        subject: "Final Representation on CGL 2025 by Present Candidates",
-        body: "Sir,%0D%0A%0D%0AWe’ve come today as a last resort to meet you and seek fairness in this recruitment cycle. Please grant us an audience.%0D%0A%0D%0ASincerely"
-      }
-    ];
+<div id="successMessage">✅ Well done! You've successfully sent all 20 emails!</div>
 
-    function handleClick(button, index) {
-      button.classList.add("sent");
-      button.textContent = "Sent";
-      button.disabled = true;
+<script>
+  function sendEmail(button, index) {
+    const to = "chairman@ssc.nic.in";
+    const cc = "chairmanssc@gmail.com";
+    const subject = encodeURIComponent("Request for Meeting – SSC CGL 2024 Final Attempt Candidates");
+    const body = encodeURIComponent(`Respected Sir,
 
-      const subject = emails[index].subject;
-      const body = emails[index].body;
-      window.location.href = `mailto:chairman@ssc.nic.in,chairmanssc@gmail.com?subject=${subject}&body=${body}`;
+We, a group of SSC aspirants from different states, are currently waiting outside your office seeking a meeting with you regarding the SSC CGL 2024 final attempt and irregularities. Kindly grant us a few minutes of your time.
 
-      const all = document.querySelectorAll("button");
-      const sent = document.querySelectorAll("button.sent");
+Thank you,
+[Your Name]
+[Your Contact]`);
 
-      if (sent.length === all.length) {
-        document.getElementById("successMessage").style.display = "block";
-      }
+    const mailtoLink = `mailto:${to}?cc=${cc}&subject=${subject}&body=${body}`;
+    window.location.href = mailtoLink;
+
+    button.classList.add("sent");
+    button.textContent = "Sent";
+    button.disabled = true;
+
+    const allButtons = document.querySelectorAll(".email-button");
+    const sentButtons = document.querySelectorAll(".email-button.sent");
+
+    if (sentButtons.length === allButtons.length) {
+      document.getElementById("successMessage").style.display = "block";
     }
-  </script>
+  }
+</script>
+
 </body>
 </html>
