--- a/index.html
+++ b/index.html
@@ -70,21 +70,7 @@
   <div id="buttonsContainer"></div>
 
   <script>
-    const emails = [
-      {
-        subject: "Request for Meeting – Aspirants Waiting Outside SSC Office Today",
-        body: "Respected Sir,\n\nAspirants have come from various states and are currently waiting outside the SSC office today to meet you regarding the SSC CGL 2024 age cutoff issue. We kindly request you to grant us a few minutes of your time today for this important matter."
-      },
-      {
-        subject: "Humble Request for Meeting – Aspirants Present Outside SSC Today",
-        body: "Respected Sir,\n\nAspirants concerned with the age cutoff for SSC CGL 2024 are present outside the SSC office today. We respectfully request you to consider granting us a short meeting to express our concerns in person."
-      },
-      {
-        subject: "Kind Request to Meet – Aspirants Awaiting Outside SSC Office",
-        body: "Respected Sir,\n\nToday, a group of aspirants from across India is present outside the SSC office seeking your kind audience. We request a few minutes of your valuable time to share our concerns regarding the age eligibility issue in SSC CGL 2024."
-      },
-      // Add up to 20 email objects here...
-    ];
+    const emails = [/* same email array as you provided */];
 
     const container = document.getElementById('buttonsContainer');
     emails.forEach((email, i) => {
