--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     }
 
     button.sent {
-      background-color: #2ecc71 !important; /* green */
+      background-color: #2ecc71 !important;
       color: #fff;
       pointer-events: none;
     }
@@ -61,6 +61,13 @@
       height: 60px;
       border-radius: 10px;
     }
+
+    #congratsMsg {
+      margin-top: 30px;
+      font-size: 20px;
+      color: #00ffcc;
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -68,29 +75,13 @@
   <p>Click each button to open a drafted email. Sent emails will turn green.</p>
 
   <div id="buttonsContainer"></div>
+  <div id="congratsMsg">🎉 All 20 emails sent! Well done! 🎉</div>
 
   <script>
-    const emails = [/* same email array as you provided */];
+    const emails = [
+      { subject: "Urgent Meeting Request – Aspirants from across India present", body: "Sir, aspirants have traveled from various states and are waiting at your office. Kindly grant us a brief meeting today to represent our concerns." },
+      { subject: "Request for Today’s Meeting – SSC Aspirants Awaiting Outside", body: "Respected Sir, aspirants are waiting outside your office to request a short meeting regarding CGL 2024 issues. Please grant us a few minutes." },
+      { subject: "Kind Request for Meeting Today – Aspirants Awaiting at SSC", body: "Dear Sir, a group of aspirants is currently present at your office. We humbly request you to allow a short meeting with us today." },
+      { subject: "Final Attempt As
 
-    const container = document.getElementById('buttonsContainer');
-    emails.forEach((email, i) => {
-      const fullBody = `${email.body}\n\nSincerely,\nConcerned SSC CGL 2024 Aspirant\nContact: +91-8219239139`;
-
-      const button = document.createElement('button');
-      button.textContent = `📩 Email ${i + 1}`;
-      button.onclick = () => {
-        const to = encodeURIComponent("chairman@ssc.nic.in,chairmanssc@gmail.com");
-        const mailSubject = encodeURIComponent(email.subject);
-        const mailBody = encodeURIComponent(fullBody);
-        window.location.href = `mailto:${to}?subject=${mailSubject}&body=${mailBody}`;
-        button.classList.add('sent');
-      };
-      container.appendChild(button);
-    });
-  </script>
-
-  <div class="logo">
-    <img src="s-icon.jpeg" alt="S Icon">
-  </div>
-</body>
-</html>
+    
